# manos

./: .gitignore  CNAME  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  MangoAction.cs~  MangoModule.cs~  README.md  SPDY.md  autogen.sh  build.bat  configure  configure.ac  configure.in  epoll_test.cs~  index.html  libtool
src/Manos/: Makefile.am  Manos.csproj  Manos.make  Manos.sln  Manos.userprefs  autogen.sh  configure.ac  mango.pc.in  manos.pc.in
src/Manos.IO/: Makefile.am  Manos.IO.csproj
src/Manos.IO/Assembly/: AssemblyInfo.cs  AssemblyInfo.cs.in
src/Manos.IO/Libev/: AsyncWatcher.cs  CheckWatcher.cs  EventTypes.cs  IOWatcher.cs  IdleWatcher.cs  Loop.cs  LoopType.cs  Pipe.cs  PrepareWatcher.cs  TimerWatcher.cs  UnloopType.cs  UnmanagedWatcherCallback.cs  Watcher.cs
src/Manos.IO/Manos.IO/: AddressFamily.cs  ByteBuffer.cs  ByteStream.cs  Context.cs  EndPoint.cs  Errors.cs  FragmentStream.cs  IAsyncWatcher.cs  IBaseWatcher.cs  IByteStream.cs  ICheckWatcher.cs  IIdleWatcher.cs  INotifier.cs  IOException.cs  IPAddress.cs  IPEndPoint.cs  IPrepareWatcher.cs  ISendfileCapable.cs  ISocket.cs  IStream.cs  IStreamSocket.cs  ITcpServerSocket.cs  ITcpSocket.cs  ITimerWatcher.cs  IUdpSocket.cs  OpenMode.cs  ProtocolFamily.cs  Socket.cs  SocketError.cs  SocketException.cs  Stream.cs  TcpSocket.cs  UdpPacket.cs  UdpSocket.cs
src/Manos.IO/Manos.IO.Libev/: Context.cs  EioContext.cs  Errors.cs  EventedByteStream.cs  EventedSocket.cs  EventedStream.cs  FileStream.cs  IPSocket.cs  Libeio.cs  ManosIPEndpoint.cs  Notifier.cs  PlainSocket.cs  SecureSocket.cs  SendFileOperation.cs  SocketFunctions.cs  SocketInfo.cs  TcpSocket.cs  UdpSocket.cs
src/Manos.IO/Manos.IO.Managed/: AsyncWatcher.cs  CheckWatcher.cs  Context.cs  FileStream.cs  IPSocket.cs  IdleWatcher.cs  ManagedByteStream.cs  ManagedStream.cs  Notifier.cs  PrepareWatcher.cs  Socket.cs  TcpSocket.cs  TimerWatcher.cs  UdpSocket.cs  Watcher.cs
src/Manos/Assembly/: AssemblyInfo.cs  AssemblyInfo.cs.in
src/Manos/Libeio/: Libeio.cs
src/Manos/Libev/: AsyncWatcher.cs  CheckWatcher.cs  EventTypes.cs  IOWatcher.cs  IdleWatcher.cs  Loop.cs  LoopType.cs  PrepareWatcher.cs  TimerWatcher.cs  UnloopType.cs  UnmanagedWatcherCallback.cs  Watcher.cs
src/Manos/Manos.Caching/: CacheItemCallback.cs  CacheOpCallback.cs  IManosCache.cs  ManosInProcCache.cs
src/Manos/Manos.Collections/: ByteBuffer.cs  DataDictionary.cs
src/Manos/Manos.Http/: CopyingSendFileOperation.cs  HState.cs  HttpBufferedBodyHandler.cs  HttpCallback.cs  HttpCookie.cs  HttpDataCallback.cs  HttpEntity.cs  HttpErrorCallback.cs  HttpException.cs  HttpFormDataHandler.cs  HttpHeaders.cs  HttpMethod.cs  HttpMultiPartFormDataHandler.cs  HttpParser.cs  HttpRequest.cs  HttpResponse.cs  HttpResponseStream.cs  HttpServer.cs  HttpStream.cs  HttpStreamWriterWrapper.cs  HttpTransaction.cs  HttpUtility.cs  IHttpBodyHandler.cs  IHttpDataRecipient.cs  IHttpRequest.cs  IHttpResponse.cs  IHttpTransaction.cs  ParserSettings.cs  ParserType.cs  State.cs  UploadedFile.cs
src/Manos/Manos.Http.Testing/: MockHttpRequest.cs  MockHttpResponse.cs  MockHttpTransaction.cs
src/Manos/Manos.IO/: BaseWatcher.cs  ByteUtils.cs  ConnectionAcceptedEventArgs.cs  CopyingSendFileOperation.cs  FileSystem.cs  IOLoop.cs  IOStream.cs  ISendfileCapable.cs  IWriteOperation.cs  ManagedSendFileOperation.cs  NopWriteOperation.cs  PlainSocketStream.cs  PosixSendFileOperation.cs  SecureSocketStream.cs  SendBytesOperation.cs  SendFileOperation.cs  SendFileOperation_NO_SENDFILE.cs  SocketStream.cs  Stream.cs  StreamCopySequencer.cs  UdpReceiver.cs  WriteBytesOperation.cs  WriteFileOperation.cs
src/Manos/Manos.IO.Libev/: EventedSocket.cs  EventedStream.cs  FileStream.cs  IOLoop.cs  IOStream.cs  Libeio.cs  PlainSocket.cs  PlainSocketStream.cs  SecureSocket.cs  SecureSocketStream.cs  SendFileOperation.cs  SocketInfo.cs  SocketStream.cs  StreamCopySequencer.cs  UdpReceiver.cs
src/Manos/Manos.Logging/: AbstractManosLogger.cs  ConsoleManosLogger.cs  IManosLogger.cs  LogLevel.cs  ManosConsoleLogger.cs  ManosLogManager.cs  NullManosLogger.cs
src/Manos/Manos.Managed/: AsyncWatcher.cs  FileStream.cs  IOLoop.cs  Libeio.cs  SendFileOperation.cs  Socket.cs
src/Manos/Manos.Routing/: ActionTarget.cs  HtmlFormDataTypeConverter.cs  IManosTarget.cs  IMatchOperation.cs  ManosAction.cs  MatchOperationFactory.cs  MatchType.cs  NopMatchOperation.cs  ParameterizedAction.cs  ParameterizedActionFactory.cs  ParameterizedActionTarget.cs  RegexMatchOperation.cs  RouteHandler.cs  SimpleMatchOperation.cs  StringMatchOperation.cs
src/Manos/Manos.Routing.Testing/: MockManosTarget.cs
src/Manos/Manos.Server/: ByteUtils.cs  HttpCookie.cs  HttpException.cs  HttpHeaders.cs  HttpRequest.cs  HttpResponse.cs  HttpResponseStream.cs  HttpServer.cs  HttpTransaction.cs  HttpUtility.cs  IHttpRequest.cs  IHttpResponse.cs  IHttpTransaction.cs  IOLoop.cs  IOStream.cs  IWriteOperation.cs  MultipartFormData.cs  RequestDataDictionary.cs  Timeout.cs  UploadedFile.cs  UriParser.cs  WriteBytesOperation.cs  WriteFileOperation.cs  mango-results
src/Manos/Manos.Server.Testing/: MockHttpRequest.cs  MockHttpTransaction.cs
src/Manos/Manos.Spdy/: Compression.cs  ControlFrame.cs  DataFrame.cs  GoawayFrame.cs  HeadersFrame.cs  ISpdyTransaction.cs  NameValueHeaderBlock.cs  PingFrame.cs  RstStreamFrame.cs  SPDYParser.cs  SettingsFrame.cs  SpdyEntity.cs  SpdyRequest.cs  SpdyResponse.cs  SpdyServer.cs  SpdySession.cs  SpdyStream.cs  SpdyTransaction.cs  SynReplyFrame.cs  SynStreamFrame.cs  Util.cs  VersionFrame.cs  WindowUpdateFrame.cs
src/Manos/Manos.Template/: Engine.cs  Expression.cs  IManosTemplate.cs  ITemplateCodegen.cs  ManosTemplate.cs  TemplateCSharpCodegen.cs  TemplateCompiler.cs  TemplateEngine.cs  TemplateEnvironment.cs  TemplateFactory.cs  TemplateLibrary.cs  TemplateParser.cs  TemplateTokenizer.cs  codegen.cs  (+7 more)
src/manostool/: AssemblyInfo.cs  AssemblyInfo.cs.in  BuildCommand.cs  DocsCommand.cs  DocsModule.cs  Driver.cs  Environment.cs  InitCommand.cs  Loader.cs  Makefile.am  Options.cs  RunCommand.cs  ServerCommand.cs  manostool.csproj
(+614 files in other folders)
